# Ubridge

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
gcu-kernels/: .gitignore  Cargo.toml  build.rs  cleanup-dorado.sh  cleanup-pavo.sh  cleanup-scorpio.sh
kernels/: activation.cpp  activation.topsfb  affine.cpp  attention.cpp  batch_matmul.cpp  binary.cpp  cache.cpp  cache_host.cpp  cast.cpp  cast_atomic.h  causal_conv1d_host.cpp  choreo_runtime.h  conv.cpp  convolution.ptx  convolution.topsfb  copy.cpp  dequant_host.cpp  dot.cpp  dot_core_kernels.h  dotllm.cpp  elementi32.ptx  embedding.cpp  fill.cpp  fused_batch_matmul.cpp  fused_moe_host.cpp  gdn_decode_l2norm_recurrence_post_fused_bf16_host.cpp  gdn_decode_recurrence_fused_bf16_host.cpp  gdn_decode_recurrence_post_fused_host.cpp  gdn_decode_slots_gqa_host.cpp  gdn_decode_slots_host.cpp  gdn_ffi_bridge_host.cpp  gdn_gating_host.cpp  gdn_l2norm_host.cpp  gdn_recurrence_host.cpp  gdn_recurrence_varlen_host.cpp  gdn_rmsnorm_host.cpp  gdn_scatter_host.cpp  gemm.cpp  gemm_general.h  indexing.cpp  (+26 more)
kernels/dorado/: activation.o0.out  activation.topsfb  batch_matmul.o0.out  batch_matmul.topsfb  batch_matmul_legacy.topsfb  binary.topsfb  convolution.topsfb  dot.topsfb  dotllm.topsfb  element.o0.out  element.topsfb  fill.topsfb  fused_batch_matmul.topsfb  gemm.topsfb  indexing.topsfb  reduce.topsfb  ternary.topsfb  transpose.o0.out  transpose.topsfb  transposed_matmul.o0.out  transposed_matmul.topsfb  unary.o0.out  unary.topsfb
kernels/gpu/: activation.ptx  element.ptx
kernels/legacy/: activation.cpp  batch_matmul.cpp  batch_matmul_legacy.cpp  convolution.cpp  dotllm.cpp  element.cpp  gemm.cpp  gemm_general.h  matmul.cpp  op_aten_gemm_tuner.h  transpose.cpp
kernels/legacy/dorado/: activation.topsfb  batch_matmul_legacy.topsfb  convolution.topsfb  element.topsfb
kernels/legacy/pavo/: activation.topsfb  batch_matmul_legacy.topsfb  convolution.topsfb  element.topsfb
kernels/legacy/scorpio/: activation.topsfb  batch_matmul_legacy.topsfb  convolution.topsfb  element.topsfb
kernels/pavo/: activation.topsfb  batch_matmul.topsfb  batch_matmul_legacy.topsfb  binary.topsfb  convolution.topsfb  dot.topsfb  dotllm.topsfb  element.topsfb  fill.topsfb  fused_batch_matmul.topsfb  gemm.topsfb  indexing.topsfb  matmul.topsfb  reduce.topsfb  ternary.topsfb  transpose.topsfb  transposed_matmul.topsfb  unary.topsfb
kernels/scorpio/: activation.topsfb  affine.topsfb  attention.topsfb  batch_matmul.topsfb  batch_matmul_legacy.topsfb  binary.topsfb  cache.topsfb  cast.topsfb  conv.topsfb  convolution.topsfb  copy.topsfb  dot.topsfb  dotllm.topsfb  element.topsfb  embedding.topsfb  fill.topsfb  gemm.topsfb  indexing.topsfb  kvconcat.topsfb  matmul.topsfb  quant.topsfb  reduce.topsfb  sort.topsfb  ternary.topsfb  transpose.topsfb  unary.topsfb
kernels/utils/: attention_gqa_kernels.h  matmul_decoding.h  moe_indices_check.h  moe_kernel_compat.h  reduce_atomic.h  utils.h  vector_ex.h
resources/: activation.ptx  convolution.ptx  matmul.ptx  transpose.ptx
src/: device_executor.rs  device_opcode.rs  device_ptr.rs  device_tensor.rs  eccl.rs  eccllib.rs  ffi.rs  gcu_device.rs  gcu_launch.rs  gcu_slice.rs  gemm_tuner.rs  lib.rs  main.rs
src/tests/: gemm_test.rs  kernel_test.rs  memory_test.rs  mod.rs  network_test.rs
tools/: topscc-compile-dorado.sh  topscc-compile-pavo.sh  topscc-compile-scorpio.sh
