[package]
name = "ubridge"
version = "0.1.0"
edition = "2021"
authors = ["Guoqing Bao <guoqing.bao@enflame-tech.com>"]

license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Bridge between Chopper Runtime and UHAL."

[dependencies]
uhal = { path = "../UHHI/uhal", version = "0.1.0"}
cuda_backend = { path = "../UHHI/cuda_backend", version = "0.1.0", optional = true}
tops_backend = { path = "../UHHI/tops_backend", version = "0.1.0", optional = true}
gcu-kernels = { path = "./gcu-kernels", version = "0.1.0", optional = true }
cust_core = { path = "../UHHI/common_features/cust_core", version = "0.1.0"}
lazy_static = {version = "1.4.0"}
float_eq = { version = "0.7.0"}
num-traits = { version = "0.2.16"}
once_cell = "1.20.2"

[features]
default= ["tops_backend", "gcu-kernels/scorpio"]
cuda = ["cuda_backend"]
gcu = ["tops_backend", "gcu-kernels/scorpio"]
dorado = ["tops_backend", "gcu-kernels/dorado"]
scorpio = ["tops_backend", "gcu-kernels/scorpio"]

