[package]
name = "ubridge"
version = "0.1.0"
edition = "2021"
authors = ["Guoqing Bao <guoqing.bao@enflame-tech.com>"]

license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Bridge between Chopper Runtime and UHAL."

[dependencies]
uhal = { git = "https://github.com/EnflameTechnology/UHHI.git", version = "0.1.0", rev = "06356e7"}
cuda_backend = { git = "https://github.com/EnflameTechnology/UHHI.git", version = "0.1.0", rev = "06356e7", optional = true}
tops_backend = { git = "https://github.com/EnflameTechnology/UHHI.git", version = "0.1.0", rev = "06356e7", optional = true}
cust_core = { git = "https://github.com/EnflameTechnology/UHHI.git", version = "0.1.0", rev = "06356e7"}
lazy_static = {version = "1.4.0"}
float_eq = { version = "0.7.0"}
num-traits = { version = "0.2.16"}
once_cell = "1.20.2"
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics"] }
tracing = "0.1.40"

[build-dependencies]
glob = "0.3.1"
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
reqwest = {version = "0.12.4", features = ["blocking"]}

[features]
default= ["tops_backend"]
cuda = ["cuda_backend"]
gcu = ["tops_backend"]
eccl = ["tops_backend/eccl"]
scorpio = ["tops_backend"]

