[package]
name = "gcu-kernels"
version = "0.2.0"
edition = "2021"

description = "CUDA kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"


[build-dependencies]
glob = "0.3.1"
