[package]
name = "gcu-kernels"
version = "0.1.0"
edition = "2021"

description = "GCU kernels for Candle"
repository = "http://git.enflame.cn/era/candle-gcu.git"
categories = ["science"]
license = "MIT OR Apache-2.0"


[build-dependencies]
glob = "0.3.1"
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
reqwest = {version = "0.12.4", features = ["blocking"]}

[features]
default= ["scorpio"]
pavo = []
dorado = []
scorpio = []